feat:refatorando código da cli; criação do InvestmentService